--- a/src/components/Burgur/Burgur.css
+++ b/src/components/Burgur/Burgur.css
@@ -6,6 +6,8 @@
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
+  width: 100%;
+  overflow: auto;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
