--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,6 +1,6 @@
-.Burgur {
+.Burger {
   width: 100%;
-  height: 250px;
+  height: 150px;
   margin: auto;
   overflow: hidden;
   text-align: center;
@@ -11,21 +11,21 @@
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
-  .Burgur {
+  .Burger {
     width: 350px;
     height: 300px;
   }
 }
 
 @media (min-width: 500px) and (min-height: 401px) {
-  .Burgur {
+  .Burger {
     width: 450px;
     height: 400px;
   }
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
-  .Burgur {
+  .Burger {
     width: 700px;
     height: 600px;
   }
